update github pages

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,11 +1,11 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "_app/immutable/start-04f4c8c9.js",
+    "file": "_app/immutable/start-7a54dacd.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-e9fda18a.js",
-      "_paths-b9644fda.js"
+      "_index-26e16195.js",
+      "_paths-e27bc255.js"
     ],
     "dynamicImports": [
       ".svelte-kit/runtime/components/layout.svelte",
@@ -14,41 +14,44 @@
     ]
   },
   ".svelte-kit/runtime/components/layout.svelte": {
-    "file": "_app/immutable/layout.svelte-805d94ae.js",
+    "file": "_app/immutable/layout.svelte-bee8a46f.js",
     "src": ".svelte-kit/runtime/components/layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-e9fda18a.js"
+      "_index-26e16195.js"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "_app/immutable/error.svelte-23fed889.js",
+    "file": "_app/immutable/error.svelte-24858b98.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-e9fda18a.js"
+      "_index-26e16195.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "_app/immutable/pages/index.svelte-0453035b.js",
+    "file": "_app/immutable/pages/index.svelte-bb73dd8d.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-e9fda18a.js",
-      "_paths-b9644fda.js"
+      "_index-26e16195.js",
+      "_paths-e27bc255.js"
     ],
     "css": [
       "_app/immutable/assets/index-efeae0d5.css"
     ]
   },
-  "_index-e9fda18a.js": {
-    "file": "_app/immutable/chunks/index-e9fda18a.js"
+  "_index-26e16195.js": {
+    "file": "_app/immutable/chunks/index-26e16195.js"
   },
-  "_paths-b9644fda.js": {
-    "file": "_app/immutable/chunks/paths-b9644fda.js"
+  "_paths-e27bc255.js": {
+    "file": "_app/immutable/chunks/paths-e27bc255.js",
+    "imports": [
+      "_index-26e16195.js"
+    ]
   },
   "src/routes/index.css": {
     "file": "_app/immutable/assets/index-efeae0d5.css",
