--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	},
 	"type": "module",
 	"engines": {
-		"node": ">= 16.13.0"
+    "node": "18.x"
 	},
 	"browserslist": "> 0.5%, last 4 versions, not ie <= 11, not ie_mob <= 11",
 	"dependencies": {
